force-app/main/default/objects/BLN_AccountGroupRule__c/BLN_AccountGroupRule__c.object-meta.xml
<CustomObject>
    <label>Account Group Rule</label>
    <nameField>
        <label>Account Group Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Group Rules</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>