force-app/main/default/objects/BLN_AccountGroupRule__c/fields/BLN_ActiveFrom__c.field-meta.xml
<CustomField>
    <fullName>BLN_ActiveFrom__c</fullName>
    <description>FOUK-5765</description>
    <label>Active From</label>
    <type>Date</type>
</CustomField>