force-app/main/default/objects/BLN_AccountGroupRule__c/fields/BLN_ActiveTo__c.field-meta.xml
<CustomField>
    <fullName>BLN_ActiveTo__c</fullName>
    <description>FOUK-5765</description>
    <label>Active To</label>
    <type>Date</type>
</CustomField>