force-app/main/default/objects/BLN_AccountGroupRule__c/fields/BLN_ClientSubType__c.field-meta.xml
<CustomField>
    <fullName>BLN_ClientSubType__c</fullName>
    <label>Client Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>BLN_ClientType__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>ClientSubTypes</valueSetName>
    </valueSet>
</CustomField>