force-app/main/default/objects/BLN_AccountGroupRule__c/fields/BLN_ClientType__c.field-meta.xml
<CustomField>
    <fullName>BLN_ClientType__c</fullName>
    <label>Client Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ClientTypes</valueSetName>
    </valueSet>
</CustomField>