force-app/main/default/objects/BLN_AccountGroupRule__c/fields/BLN_CorporateType__c.field-meta.xml
<CustomField>
    <fullName>BLN_CorporateType__c</fullName>
    <description>FOUK-5765</description>
    <label>Corporate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ClientTypes</valueSetName>
    </valueSet>
</CustomField>