force-app/main/default/objects/BLN_AccountGroupRule__c/fields/BLN_IsActive__c.field-meta.xml
<CustomField>
    <fullName>BLN_IsActive__c</fullName>
    <description>FOUK-5765</description>
    <formula>AND(
    TODAY() &lt;=  BLN_ActiveTo__c ,
    TODAY() &gt;=  BLN_ActiveFrom__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Active?</label>
    <type>Checkbox</type>
</CustomField>