force-app/main/default/objects/BLN_AccountGroupRule__c/fields/BLN_MDMAccountRuleGroupID__c.field-meta.xml
<CustomField>
    <fullName>BLN_MDMAccountRuleGroupID__c</fullName>
    <description>FOUK-11876</description>
    <label>MDM Account Rule Group ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>