force-app/main/default/objects/BLN_AccountGroupRule__c/fields/BLN_OwningBusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>BLN_OwningBusinessUnit__c</fullName>
    <description>FOUK-5765</description>
    <label>Owning Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BLN_OwningBusinessUnitGlobal</valueSetName>
    </valueSet>
</CustomField>