force-app/main/default/objects/BLN_AccountGroupRule__c/recordTypes/BLN_CorporateLevel.recordType-meta.xml
<RecordType>
    <fullName>BLN_CorporateLevel</fullName>
    <active>true</active>
    <label>Corporate Level</label>
</RecordType>