force-app/main/default/objects/BLN_AccountGroupRule__c/recordTypes/BLN_Template.recordType-meta.xml
<RecordType>
    <fullName>BLN_Template</fullName>
    <active>true</active>
    <label>Template</label>
</RecordType>