force-app/main/default/objects/BLN_AccountGroupRule__c/validationRules/BLN_ActiveFromDateValid.validationRule-meta.xml
<ValidationRule>
    <fullName>BLN_ActiveFromDateValid</fullName>
    <active>true</active>
    <description>FOUK-5765</description>
    <errorConditionFormula>AND( NOT($Permission.BLN_BypassValidationRules),
    NOT(ISBLANK( BLN_ActiveFrom__c )),
    NOT(ISBLANK( BLN_ActiveTo__c )),
     BLN_ActiveFrom__c  &gt;=  BLN_ActiveTo__c )</errorConditionFormula>
    <errorDisplayField>BLN_ActiveFrom__c</errorDisplayField>
    <errorMessage>Active From date must be earlier than Active To date.</errorMessage>
</ValidationRule>