force-app/main/default/objects/BLN_AccountGroupRule__c/listViews/BLN_AccountRuleTemplates.listView-meta.xml
<ListView>
    <fullName>BLN_AccountRuleTemplates</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>BLN_Description__c</columns>
    <columns>BLN_ActiveFrom__c</columns>
    <columns>BLN_ActiveTo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>BLN_AccountGroupRule__c.BLN_Template</value>
    </filters>
    <label>Account Rule Templates</label>
</ListView>