force-app/main/default/objects/BLN_AccountGroupRule__c/listViews/BLN_CorporateLevelAccountRules.listView-meta.xml
<ListView>
    <fullName>BLN_CorporateLevelAccountRules</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>BLN_Description__c</columns>
    <columns>BLN_ActiveFrom__c</columns>
    <columns>BLN_ActiveTo__c</columns>
    <columns>BLN_CorporateType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>BLN_AccountGroupRule__c.BLN_CorporateLevel</value>
    </filters>
    <label>Corporate Level Account Rules</label>
</ListView>